--- a/p2/src/index.html
+++ b/p2/src/index.html
@@ -2,28 +2,16 @@
 <html>
     <head>
         <title>Hello Kubernetes!</title>
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300">
     </head>
-        
+
     <body>
         <div class="main">
-            <img src="/images/kubernetes.png"/>
+            <!-- <img src="/images/kubernetes.png"/> -->
             <div class="content">
                 <div id="message">
-                    Hello from app2.
-                </div>
-                <div id="info">
-                    <table>
-                        <tr>
-                            <th>pod:</th>
-                            <td>app-two-6bc974bc98-qtjj7</td>
-                        </tr>
-                        <tr>
-                            <th>node:</th>
-                            <td>Linux (4.18.0-240.1.1.el8_3.x86_64)</td>
-                        </tr>
-                    </table>
+                    Hello from {{ APP_NAME }}
                 </div>
             </div>
         </div>
